fixed about me section spacing

--- a/public/css/aboutme.css
+++ b/public/css/aboutme.css
@@ -1,6 +1,13 @@
 /* General */
+body {
+    margin: 0;
+    padding: 0;
+}
 #about-me {
     background-color: #f8f8f8; 
+    margin: 0;
+    padding: 0;
+    min-height: 100vh;
 }
 
 /* Left */
